--- a/vde_skillaz_transformers/requirements.txt
+++ b/vde_skillaz_transformers/requirements.txt
@@ -4,6 +4,7 @@ email_validator==2.2.0
 idna==3.7
 iniconfig==2.0.0
 packaging==24.1
+phonenumbers==8.13.39
 pluggy==1.5.0
 pydantic==2.7.4
 pydantic-extra-types==2.8.2
